--- a/2011/riak-core-first-multinode/mfmn/rebar.config
+++ b/2011/riak-core-first-multinode/mfmn/rebar.config
@@ -1,7 +1,7 @@
-{erl_opts, [debug_info, fail_on_warning]}.
+%{erl_opts, [debug_info, fail_on_warning]}.
 
 {sub_dirs, ["rel"]}.
 
-{deps, [{riak_core, "1.0.*",
-         {git, "git://github.com/basho/riak_core", {tag,"1.0.0"}}}
+{deps, [{riak_core, ".*",
+         {git, "git://github.com/basho/riak_core", "master"}}
        ]}.
